# pyproteininference

./: .gitignore  404.html  AUTHORS  Command_Line_PI_runner2.py  Command_Line_PI_runner_Yaml.py  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rtf  entrap_runner.py  index.html  mkdocs.yml  objects.inv  practice_digest.py  pyProteinInference.spec  pylint.cfg  requirements.txt  runner.py  runner_new.py  search.html  setup.cfg  setup.py  tox.ini
Digest/: README.md  __init__.py  insilicodigest.py
ProteinInference/: benchmark.py  datastore.py  entrapment.py  export.py  fdrcalc.py  grouping.py  physical.py  picker.py  reader.py  scoring.py
advanced/: index.html
docs/: advanced.md  index.md  input_format.md  parameters.md  pyproteininference_reference.md  quickstart.md  supplementary.md
input_format/: index.html
parameters/: Protein_Inference_Params.yaml  Protein_Inference_Params_1fdr.yaml  Protein_Inference_Params_1fdr_lysc.yaml  Protein_Inference_Params_2fdr.yaml  Protein_Inference_Params_2fdr_lysc.yaml  Protein_Inference_Params_3mc.yaml  Protein_Inference_Params_5fdr.yaml  Protein_Inference_Params_prest.yaml  index.html
protein_inference/: __init__.py  benchmark.py  datastore.py  entrapment.py  export.py  fdrcalc.py  grouping.py  in_silico_digest.py  inference.py  parameters.py  physical.py  picker.py  pipeline.py  qvality.py  reader.py  scoring.py
py_protein_inference/: __init__.py  benchmark.py  datastore.py  entrapment.py  export.py  fdrcalc.py  grouping.py  heuristic.py  in_silico_digest.py  inference.py  parameters.py  physical.py  picker.py  pipeline.py  qvality.py  reader.py  scoring.py
pyproteininference/: __init__.py  datastore.py  export.py  heuristic.py  in_silico_digest.py  inference.py  parameters.py  physical.py  pipeline.py  reader.py  scoring.py
pyproteininference_reference/: index.html
quickstart/: index.html
scripts/: Command_Line_PI_runner_Yaml.py  Command_Line_PI_runner_defunct.py  PivSieve.py  __init__.py  entrap_runner.py  loop_entrapment_runner_diff_dbs.py  loop_entrapment_runner_prest.py  loop_entrapment_runner_prest_diff_randomdb.py  practice_digest.py  protein_inference_cli.py  protein_inference_gui.py  protein_inference_heuristic_cli.py  runner_old.py  server_loop_entrapment_runner_diff_dbs_new.py
search/: search_index.json
supplementary/: index.html
tests/: test_001_parsimony_pipeline.py  test_001_parsimony_pipeline_glpk.py  test_002_inclusion_pipeline.py  test_003_exclusion_pipeline.py  test_004_gfy_type_no_inference_pipeline.py  test_005_parsimony_pipeline_pulp.py  test_006_peptide_centric_pipeline.py  test_007_peptide_parsing.py  test_008_input_reading.py  test_009_additive_custom_pipeline.py  test_011_test_exports.py  (+17 more)
(+67 files in other folders)
