[metadata]
name = py_protein_inference
author = Trent Hinkle
author-email = hinklet@gene.com
summary = Python Package for running custom Protein Inference on tab-formatted tandem MS/MS search results
description-file = README.md
home-page = http://gene.com
version = 0.6.4
license = Apache-2
#classifier =
#    Development Status :: 4 - Beta
#    Environment :: Console
#    Environment :: OpenStack
#    Intended Audience :: Developers
#    Intended Audience :: Information Technology
#    License :: OSI Approved :: Apache Software License
#    Operating System :: OS Independent
#    Programming Language :: Python
keywords =
    bluecopper
[files]
packages =
    py_protein_inference
#data_files =
#    etc/bluecopper/conf.d = peptide_glossary.ini.dist
[entry_points]
#paste.app_factory =
#    main = peptide_glossary:main
#bluecopper_module =
#    {cookiecutter.app_name}} = peptide_glossary.bluecopper_module:module_factory
[pbr]
#autodoc_tree_index_modules = True
#autodoc_index_modules = True
[devpi:upload]
no-vcs = 1
with-docs = 1

#[build_sphinx]
#all_files = 1
#build-dir = doc/build
#source-dir = doc/source
