[metadata]
name = pyproteininference
author = Trent Hinkle
author_email = hinklet@gene.com
summary = Python Package for running custom Protein Inference on tab-formatted tandem MS/MS search results
description_file = README.md
home_page = http://gene.com
version = 0.9.7
license = Apache-2
#classifier =
#    Development Status :: 4 - Beta
#    Environment :: Console
#    Environment :: OpenStack
#    Intended Audience :: Developers
#    Intended Audience :: Information Technology
#    License :: OSI Approved :: Apache Software License
#    Operating System :: OS Independent
#    Programming Language :: Python
keywords =
    proteininference
[files]
packages =
    pyproteininference
[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True
[devpi:upload]
no-vcs = 1
with-docs = 1

[flake8]
max-line-length = 120
exclude = .git,.tox,.venv,doc,migrations