[metadata]
name = pyproteininference
author = Trent Hinkle
author_email = hinklet@gene.com
summary = Python Package for running custom protein inference algorithms on tab-formatted tandem MS/MS search results.
description_file = README.md
home_page = https://github.com/thinkle12/pyproteininference
version = 1.1.0
license = Apache-2
keywords =
    proteininference
[files]
packages =
    pyproteininference
[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True
[devpi:upload]
no-vcs = 1
with-docs = 1

[flake8]
max-line-length = 120
exclude = .git,.tox,.venv,doc,migrations
